minor bugfixes to card spacing and checklist

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -25,18 +25,18 @@ button, .btn{
 }
 
 form {
-    max-width: 400px;
+    max-width: 300px;
     margin: 0 auto;
     padding: 30px;
     border: 1px solid var(--secondary);
-    border-radius: 8px;
+    border-radius: 3px;
     box-shadow: 1px 2px 3px rgba(50,50,50, 0.5)
 }
 
 .card {
     background: white;
   padding: 20px;
-  margin: 1px auto;
+  margin: 20px auto;
   width: 300px;
   max-width: 90%;
   display: flex;
